@@ -17,7 +17,11 @@
                     <source>19</source>
                     <target>19</target>
                     <release>19</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.concurrent</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
